packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/query_multiple_target_extensions.cbor
¢factionequeryftarget¢ox-acme:features¡hfeatureshversionstx-mycompany:features¡hfeaturesgservers